--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,26 +1,15 @@
 <footer class="sticky-footer">
   <div class="row">
-    <!-- Columna 1: Logo -->
-    <div class="col-md-2 text-center">
+    <div class="col-md-4 texto_footer">
+      <p>Av. Hidalgo S/N esquina con Allende,</p>
+      <p>Loma Bonita</p>
+      <p>C.P. 73800</p>
+      <p>Teziutlan, Pue.</p>
+    </div>
+    <div class="col-md-4 bordes_card text-center">
       <img src="../../../assets/img/Logo Blanco.svg" alt="" width="100">
     </div>
-    <!-- Columna 2: Datos de la empresa -->
-    <div class="col-md-4 ps-0 ms-0 texto_footer">
-      <p>Copyright © 2023 Manzana Serrana</p>
-    </div>
-    <!-- Columna 3: Campo de entrada de correo -->
-    <div class="col-md-3">
-      <form>
-        <label for="telefono" class="form-label texto_footer">Contacto</label>
-        <input type="email" class="form-control" placeholder="escribe tu mensaje aqui..." aria-label="Correo electrónico"
-          aria-describedby="basic-addon2">
-        <div class="input-group-append">
-          <button class="btn btn_footer_correo" type="button">-></button>
-        </div>
-      </form>
-    </div>
-    <!-- Columna 4: Enlaces a las redes sociales -->
-    <div class="col-md-3">
+    <div class="col-md-4">
       <div class="d-flex justify-content-end">
         <a href="https://www.ejemplo.com" class="icon_footer"><span class="icon-face-blanco"></span></a>
         <a href="https://www.ejemplo.com" class="icon_footer"><span class="icon-insta"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span></a>
