--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -9,20 +9,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active cursor_pointer">
-                    <a class="nav-link color_nav_item" (click)="inventario()"><i class="fa fa-archive"></i>
+                <li class="nav-item cursor_pointer">
+                    <a class="nav-link color_nav_item" routerLinkActive="active" [routerLink]="['/admin/inventario']"><i class="fa fa-archive"></i>
                         <span> Inventario</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link color_nav_item" (click)="actividades()"><i class="fa fa-calendar-check-o"></i>
+                    <a class="nav-link color_nav_item" routerLinkActive="active" [routerLink]="['/admin/actividadesAdmin']"><i class="fa fa-calendar-check-o"></i>
                         <span> Actividades</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link color_nav_item" (click)="eventos()"><i class="fa fa-bicycle"></i>
+                    <a class="nav-link color_nav_item" routerLinkActive="active" [routerLink]="['/admin/eventos']"><i class="fa fa-bicycle"></i>
                         <span> Eventos</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link color_nav_item" (click)="ventas()"><i class="fa fa-line-chart"></i>
+                    <a class="nav-link color_nav_item"  routerLinkActive="active" [routerLink]="['/admin/ventas']"><i class="fa fa-line-chart"></i>
                         <span> Ventas y Pedidos</span></a>
                 </li>
                 <li class="nav-item dropdown">
