--- a/src/app/pages/quienes-somos/quienes-somos.component.html
+++ b/src/app/pages/quienes-somos/quienes-somos.component.html
@@ -1,8 +1,11 @@
 <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+      aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+      aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -45,3 +48,42 @@
       </div>
     </div>
   </div>
+</div>
+<!-- Message system -->
+<ng-container *ngIf="banderaId">
+  <div class="message-container">
+    <div class="dropdown">
+      <button class="btn btn-rojo" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+        <i class="fa fa-envelope"></i>
+      </button>
+    </div>
+  </div>
+</ng-container>
+
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas-header">
+    <h5 id="offcanvasRightLabel" class="texto_subtitle mt-1">Mandar Nota a Administrador</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+        <label for="tipoManzana" class="form-label texto_card">Tipo de Manzana</label>
+        <select class="form-control texto_input" id="tipoManzana" formControlName="tipoManzana">
+          <option *ngFor="let manzana of listaIdManzana" [value]="manzana.id">{{ manzana.nombre }}</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="tipoMensaje" class="form-label texto_card">Tipo de Mensaje</label>
+        <select class="form-control texto_input" id="tipoMensaje" formControlName="tipoMensaje">
+          <option *ngFor="let mensaje of listaMensaje" [value]="mensaje.id">{{ mensaje.nombre }}</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label for="cantidad" class="form-label texto_card">Cantidad</label>
+        <input type="number" class="form-control texto_input" id="cantidad" formControlName="cantidad">
+      </div>
+      <button type="submit" class="btn btn-rojo">Enviar</button>
+    </form>
+  </div>
+</div>
