--- a/src/app/pages/eventos/eventos.component.html
+++ b/src/app/pages/eventos/eventos.component.html
@@ -76,8 +76,8 @@
         Estas seguro de eliminar {{ nombreProducto }}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="eliminarEvento()">Eliminar</button>
+        <button type="button" class="btn btn-gris" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-rojito" (click)="eliminarEvento()">Eliminar</button>
       </div>
     </div>
   </div>
@@ -95,25 +95,9 @@
         Estas seguro de eliminar {{ nombreProducto }}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="eliminarPunto()">Eliminar</button>
+        <button type="button" class="btn btn-gris" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-rojito" (click)="eliminarPunto()">Eliminar</button>
       </div>
-    </div>
-  </div>
-</div>
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-  <div class="offcanvas-header">
-    <h5 id="offcanvasRightLabel">Mandar Nota a Administrador</h5>
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <div class="mb-3">
-      <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-    <div>
-      <button type="submit" class="btn btn-primary mb-3">Enviar
-      </button>
     </div>
   </div>
 </div>
