--- a/src/app/pages/actividades-admin/actividades-admin.component.html
+++ b/src/app/pages/actividades-admin/actividades-admin.component.html
@@ -34,8 +34,7 @@
   </table>
 </div>
 <!-- Modal para eliminar -->
-<div class="modal fade" id="eliminar" tabindex="-1"
-  aria-labelledby="eliminar" aria-hidden="true">
+<div class="modal fade" id="eliminar" tabindex="-1" aria-labelledby="eliminar" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -46,25 +45,9 @@
         Estas seguro de eliminar {{ nombreProducto }}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="eliminar()">Save changes</button>
+        <button type="button" class="btn btn-gris" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-rojito" (click)="eliminar()">Eliminar</button>
       </div>
-    </div>
-  </div>
-</div>
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-  <div class="offcanvas-header">
-    <h5 id="offcanvasRightLabel">Mandar Nota a Administrador</h5>
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <div class="mb-3">
-      <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-    <div>
-      <button type="submit" class="btn btn-primary mb-3">Enviar
-      </button>
     </div>
   </div>
 </div>
