--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,28 +1,45 @@
-<div id="carouselExampleIndicators" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<div class="">
+  <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+          <div class="swiper-slide fondo_swiper">
+              <img src="../../../assets/img/Manza-home.jpg" alt="">
+              <div class="overlay_box">
+                  <div class="texto_superpuesto">
+                      <p class="texto_small_swiper">Conoce los beneficios de las</p>
+                      <p class="texto_big_swiper">manzanas</p>
+                      <p class="texto_big_swiper">orgánicas</p>
+                  </div>
+              </div>
+          </div>
+          <div class="swiper-slide">
+              <div class="fondo_swiper">
+                  <img src="../../../assets/img/Manza-home.jpg" alt="">
+              </div>
+          </div>
+          <div class="swiper-slide fondo_swiper">
+              <img src="../../../assets/img/Manza-home.jpg" alt="">
+              <div class="overlay_box">
+                  <div class="texto_superpuesto">
+                      <p class="texto_small_swiper">Conoce nuestras</p>
+                      <p class="texto_big_swiper">actividades</p>
+                  </div>
+              </div>
+          </div>
+          <div class="swiper-slide fondo_swiper">
+              <img src="../../../assets/img/Manza-home.jpg" alt="">
+              <div class="overlay_box">
+                  <div class="texto_superpuesto">
+                      <p class="texto_small_swiper">Conoce los beneficios de las</p>
+                      <p class="texto_big_swiper">manzanas</p>
+                      <p class="texto_big_swiper">orgánicas</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../../../assets/img/carrusel.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../assets/img/carrusel.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../assets/img/carrusel.png" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
 <div class="container text-center mt-5 mb-5">
   <span class="texto_subtitle">Manzana Serrana</span>
