--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -5,11 +5,11 @@
 <div class="container mt-3 p-1">
   <table class="table table-hover">
     <thead>
-      <tr class="text-center">
+      <tr class="text-center texto_tabla_encabezado">
         <th>#</th>
         <th>Nombre</th>
         <th>Estatus</th>
-        <th>Precio</th>
+        <th>Categoria</th>
         <th>Stock</th>
         <th>Imagen</th>
         <th></th>
@@ -21,7 +21,7 @@
         <th class="text-center vertical_align">{{ list.id }}</th>
         <th class="text-center vertical_align">{{ list.nombre }}</th>
         <td class="text-center vertical_align">{{ list.estatus }}</td>
-        <td class="text-center vertical_align">{{ list.precio }}</td>
+        <td class="text-center vertical_align">{{ list.categoria_nombre }}</td>
         <td class="text-center vertical_align">{{ list.stock }}</td>
         <td class="text-center vertical_align">
           <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(list.foto)" alt="" class="img-table">
@@ -62,7 +62,7 @@
           <button class="btn btn-rojo" (click)="buscarDerivado(list.id, 1, list.nombre)">Actualizar</button>
         </td>
         <td class="text-center vertical_align">
-          <button class="btn btn-rojo" (click)="buscarDerivado(list.id, 2, list.nombre)" data-bs-toggle="modal"
+          <button class="btn btn-rojo mt-0" (click)="buscarDerivado(list.id, 2, list.nombre)" data-bs-toggle="modal"
             data-bs-target="#eliminarDerivado">Eliminar</button>
         </td>
       </tr>
@@ -82,8 +82,8 @@
         Estas seguro de eliminar {{ nombreProducto }}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="eliminar()">Save changes</button>
+        <button type="button" class="btn btn-gris" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-rojito" (click)="eliminar()">Eliminar</button>
       </div>
     </div>
   </div>
@@ -97,29 +97,12 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Estas seguro de eliminar {{ nombreProducto }} ?????
+        Estas seguro de eliminar {{ nombreProducto }}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="eliminarDerivado()">Save changes</button>
+        <button type="button" class="btn btn-gris" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-rojito" (click)="eliminarDerivado()">Eliminar</button>
       </div>
-    </div>
-  </div>
-</div>
-
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-  <div class="offcanvas-header">
-    <h5 id="offcanvasRightLabel">Mandar Nota a Administrador</h5>
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <div class="mb-3">
-      <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-    <div>
-      <button type="submit" class="btn btn-primary mb-3">Enviar
-      </button>
     </div>
   </div>
 </div>
