--- a/src/app/pages/liberar/liberar.component.html
+++ b/src/app/pages/liberar/liberar.component.html
@@ -1,47 +1,46 @@
-<div class="mt-1">
-    <span>.</span>
-</div>
-<div class="container">
-    <h1 class="mt-5 mb-3 text-center">Liberar Pedido</h1>
-</div>
-<div class="container">
+<div class="content fondo_card">
+    <div class="text-center">
+        <span class="texto_subtitle">Manzana Serrana</span>
+        <br>
+        <p class="texto_title bold space_text">Liberar Pedido</p>
+    </div>
     <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
         <div class="mb-3">
             <div class="row">
                 <div class="col">
-                    <label for="nombreCliente" class="form-label">Nombre Cliente</label>
-                    <input type="text" id="nombreCliente" class="form-control" formControlName="nombreCliente">
+                    <label for="nombreCliente" class="form-label texto_card">Nombre Cliente</label>
+                    <input type="text" id="nombreCliente" class="form-control texto_input" formControlName="nombreCliente">
                 </div>
                 <div class="col">
-                    <label for="telefonoCliente" class="form-label">Teléfono Cliente</label>
-                    <input type="tel" id="telefonoCliente" class="form-control" formControlName="telefonoCliente">
+                    <label for="telefonoCliente" class="form-label texto_card">Teléfono Cliente</label>
+                    <input type="tel" id="telefonoCliente" class="form-control texto_input" formControlName="telefonoCliente">
                 </div>
                 <div class="col">
-                    <label for="correoCliente" class="form-label">Correo Cliente</label>
-                    <input type="email" id="correoCliente" class="form-control" formControlName="correoCliente">
+                    <label for="correoCliente" class="form-label texto_card">Correo Cliente</label>
+                    <input type="email" id="correoCliente" class="form-control texto_input" formControlName="correoCliente">
                 </div>
             </div>
         </div>
         <div class="mb-3">
             <div class="row">
                 <div class="col">
-                    <label for="estadoCliente" class="form-label">Estado Cliente</label>
-                    <input type="text" id="estadoCliente" class="form-control" formControlName="estadoCliente">
+                    <label for="estadoCliente" class="form-label texto_card">Estado Cliente</label>
+                    <input type="text" id="estadoCliente" class="form-control texto_input" formControlName="estadoCliente">
                 </div>
                 <div class="col">
-                    <label for="ciudadCliente" class="form-label">Ciudad Cliente</label>
-                    <input type="text" id="ciudadCliente" class="form-control" formControlName="ciudadCliente">
+                    <label for="ciudadCliente" class="form-label texto_card">Ciudad Cliente</label>
+                    <input type="text" id="ciudadCliente" class="form-control texto_input" formControlName="ciudadCliente">
                 </div>
                 <div class="col">
-                    <label for="fechaOrdenado" class="form-label">Fecha Ordenado</label>
-                    <input type="date" id="fechaOrdenado" class="form-control" formControlName="fechaOrdenado" readonly>
+                    <label for="fechaOrdenado" class="form-label texto_card">Fecha Ordenado</label>
+                    <input type="date" id="fechaOrdenado" class="form-control texto_input" formControlName="fechaOrdenado" readonly>
                 </div>
             </div>
         </div>
         <div>
             <table class="table">
                 <thead>
-                    <tr>
+                    <tr class="text-center">
                         <th>Nombre</th>
                         <th>Cantidad</th>
                         <th>Subtotal</th>
@@ -49,7 +48,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let aux of datosManzanas">
+                    <tr class="texto_input text-center" *ngFor="let aux of datosManzanas">
                         <td>{{aux.nombre}}</td>
                         <td>{{aux.cantidad}}</td>
                         <td>{{aux.subtotal}}</td>
@@ -62,8 +61,8 @@
             </table>
         </div>
         <div class="mb-3">
-            <label for="total" class="form-label">Total</label>
-            <input type="number" id="total" class="form-control" formControlName="total" readonly>
+            <label for="total" class="form-label texto_card">Total</label>
+            <input type="number" id="total" class="form-control texto_input" formControlName="total" readonly>
         </div>
         <div class="form-check text-center">
             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click)="cambiarBtn()">
@@ -71,7 +70,7 @@
                 Confirmar que el pedido es correcto
             </label>
         </div>
-        <button type="submit" class="btn btn-rojo" [disabled]="confirmadoDos">Liberar Pedido</button>
+        <button type="submit" class="btn btn-rojo mt-3" [disabled]="confirmadoDos">Liberar Pedido</button>
     </form>
 </div>
 
@@ -80,7 +79,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modificar Pedido</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -100,8 +99,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-rojo" (click)="guardarCambios()">Save changes</button>
+          <button type="button" class="btn btn-gris" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-verdecito" (click)="guardarCambios()">Guardar Cambios</button>
         </div>
       </div>
     </div>
