--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,16 @@
-<div class="container mt-5 mb-4">
+<nav class="fondo_navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid p-0 m-2">
+     
+      <div class="row">
+        <div class="col">
+          <div class="text-center cursor_pointer">
+            <img routerLink="/home" src="../../../assets/img/Logo Horizontal.svg" alt="" width="20%" height="100%">
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+<div class="container mb-4" style="margin-top: 80px;">
     <!-- Outer Row -->
     <div class="row justify-content-center">
 
