--- a/src/app/pages/ventas/ventas.component.html
+++ b/src/app/pages/ventas/ventas.component.html
@@ -54,7 +54,7 @@
         <td>{{ aux.ciudadCliente }}</td>
         <td>{{ aux.telefonoCliente }}</td>
         <td>${{ aux.total }}</td>
-        <td>{{ aux.fechaOrdenado }}</td>
+        <td>{{ aux.fechaLiberado }}</td>
       </tr>
     </tbody>
   </table>
