--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,7 @@
 <nav class="fondo_navbar navbar-expand-lg fixed-top">
   <div class="container-fluid p-0 m-2">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="row">
-      <div class="col mt-4">
+      <div class="col-5">
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item cursor_pointer mx-1">
@@ -31,15 +27,16 @@
           </ul>
         </div>
       </div>
-      <div class="col">
-        <div class="text-center py-2">
+      <div class="col-2">
+        <div class="text-center">
           <img src="../../../assets/img/Logo Horizontal.svg" alt="" width="50%" height="60%">
         </div>
       </div>
-      <div class="col">
+      <div class="col-5">
         <div class="d-flex justify-content-end">
           <a href="https://www.ejemplo.com" class="icon"><span class="icon-face-blanco"></span></a>
-          <a href="https://www.ejemplo.com" class="icon"><span class="icon-insta"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span></a>
+          <a href="https://www.ejemplo.com" class="icon"><span class="icon-insta"><span class="path1"></span><span
+                class="path2"></span><span class="path3"></span></span></a>
           <a href="https://www.ejemplo.com" class="icon"><span class="icon-twitter-x"></span></a>
           <ng-container *ngIf="isLoggedIn">
             <a (click)="logout()" class="icon"><i class="fa fa-sign-out"></i></a>
