--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -44,7 +44,7 @@
 <div class="container text-center mt-5 mb-5">
   <span class="texto_subtitle">Manzana Serrana</span>
   <br>
-  <p class="texto_title bold space_text">Inicio</p>
+  <p class="texto_title bold">Inicio</p>
 </div>
 <div class="container mt-3 mb-3">
   <div class="row">
