--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+//clamp(1.2rem, -0.875rem + 8.333333vw, 1.5rem)
 //importaciones del font awesome
 @import "~font-awesome/css/font-awesome.css";
 @import 'leaflet/dist/leaflet.css';
@@ -33,7 +34,7 @@ $color_fondo_card: #F6F5F1;
     box-shadow: 0px 10px 20px 10px rgba(39, 41, 40, 0.4);
 }
 
-.fondo_swiper img{
+.fondo_swiper img {
     position: relative;
     width: 100%;
     height: 30%;
@@ -117,6 +118,7 @@ table {
             font-family: $kamerik-bold;
         }
     }
+
     tbody {
         tr {
             font-family: $kamerik-book;
@@ -341,7 +343,7 @@ footer {
 
 .texto_big_swiper {
     font-family: $kamerik-bold;
-    font-size: 65px;
+    font-size: clamp(1.5rem, -0.875rem + 8.333333vw, 4.063rem);
     color: $color_verde;
     padding: 0%;
     margin: 0%;
@@ -350,7 +352,7 @@ footer {
 
 .texto_small_swiper {
     font-family: $kamerik-bold;
-    font-size: 18px;
+    font-size: 1.1rem;
     color: $color_verde;
     padding: 0%;
     margin: 0%;
@@ -358,7 +360,7 @@ footer {
 
 .texto_title {
     font-family: $kamerik-bold;
-    font-size: 65px;
+    font-size: clamp(40px, -0.875rem + 8.333333vw, 65px);
     color: $color_verde;
     padding: 0%;
     margin: 0%;
@@ -375,7 +377,7 @@ footer {
 
 .texto_card_big {
     font-family: $kamerik-bold;
-    font-size: 30px;
+    font-size: clamp(10px, -0.875rem + 8.333333vw, 30px);
     color: $color_verde_card;
     font-weight: bold;
     padding: 0%;
@@ -388,14 +390,14 @@ footer {
 
 .texto_subtitle {
     font-family: $kamerik-book;
-    font-size: 20px;
+    font-size: clamp(10px, -0.875rem + 8.333333vw, 20px);
     color: $color_gris;
     font-weight: bold;
 }
 
 .texto_catgeorias {
     font-family: $kamerik-book;
-    font-size: 20px;
+    font-size: clamp(10px, -0.875rem + 8.333333vw, 20px);
 }
 
 .descripcion_card {
@@ -413,8 +415,8 @@ footer {
 }
 
 .icon {
-    margin: 6% 10% 0px 0px;
-    font-size: 25px;
+    margin: 0% 10% 0px 0px;
+    font-size: clamp(15px, -0.875rem + 8vw, 25px);
     text-decoration: none;
     color: $color_gris;
 }
@@ -454,13 +456,36 @@ footer {
     color: $color_gris !important;
 }
 
-
-//revisar este en productos es para que se despliegue palabra por palabra
-.space_text {
-    white-space: pre-line;
-}
-
 .espacios_textos {
     display: inline-block;
     line-height: 1;
 }
+
+@media (max-width: 800px) {
+    footer {
+        text-align: center;
+        .sticky-footer{
+            padding: 0% !important;
+        }
+        .d-flex{
+            justify-content: center !important;
+        }
+        .icon_footer {
+            margin: 4% 2% 0% 2%;
+        }
+    }
+}
+
+// @media (max-width: 500px) {
+//     .row-2 {
+//         flex-direction: column;
+//     }
+
+//     footer .cont-logos-footer img {
+//         width: 3.5rem !important;
+//     }
+
+//     footer .cont-logos-footer img.large {
+//         width: 15rem !important;
+//     }
+// }
